print stylesheet + draggable everywhere

--- a/beta/index.html
+++ b/beta/index.html
@@ -24,7 +24,15 @@
         </ul>
     </nav>
     <h1 class="">
-        <span class="draggable">D</span><span class="draggable">E</span><br/><span class="draggable">C</span><span class="draggable">O</span><span class="draggable">N</span><span class="draggable">S</span><br/><span class="draggable">T</span><span class="draggable">R</span><span class="draggable">U</span><span class="draggable">C</span><br/><span class="draggable">T</span><span class="draggable">I</span><span class="draggable">O</span><span class="draggable">N</span></h1>
+        <span class="draggable">D</span><span class="draggable">E</span><br/><span class="draggable">C</span><span class="draggable">O</span><span class="draggable">N</span><span class="draggable">S</span><br/><span class="draggable">T</span><span class="draggable">R</span><span class="draggable">U</span><span class="draggable">C</span><br/><span class="draggable">T</span><span class="draggable">I</span><span class="draggable">O</span><span class="draggable">N</span>
+    </h1>
+    <div class="cover-info no-screen">
+        <p>Conference TU Delft<br>
+            Faculty of Architecture<br>
+            and the Built Environment<br>
+            Monday, April 24, 2016<br>
+            Tuesday, April 25, 2016</p>
+    </div>
     <div class="text draggable" id="theme">
         <h2>THEME</h2>
         <p>Off-site reuse, in the sense of the salvaging of building components and materials from buildings that have reached the end of their life-cycle, in order to reuse them elsewhere, has been a common practice for centuries. Today, the idea is once again gaining momentum as the linear modes of materials consumption proper to the age of industrialization are being questioned.</p>
@@ -34,7 +42,7 @@
         - What design challenges, but also opportunities lie in the integration of existing components in new structures?<br />
         - How to design buildings in such a way that you maximize its potential for later reuse. On site, but also off-site. Is the “legolization” of the building industry within reach? And is it desirable?</p>
     </div>
-    <div class="text" id="program">
+    <div class="text draggable" id="program">
         <h2>PROGRAM</h2>
         <h3>Monday 24th afternoon​:</h3>
         <p>Building component reuse & heritage. Why a new attitude towards building materials was invented in the mid-20th century?</p>
@@ -55,7 +63,7 @@
         <p>- Dirk Hebel (CH, Assistant professor of architecture and construction, ETH, Zurich): ​Building for disassembly: the case of the GBMZ housing project in Zurich.</p>
         <p>- Izaskun Chinchilla (SP, Architect, Principal Izaskun Chinchilla Architects): [selection of own work - design for change]</p>
     </div>
-    <div class="text" id="speakers">
+    <div class="text draggable" id="speakers">
         <h2>SPEAKERS</h2>
         <p>- Lionel Devlieger (BE, engineer-architect and architecture historian, principal of Rotor, Brussels): Demolition and reuse in history. ​Examples from 18th, 19th and 20th century Brussels</p>
         <p>- Annette Condello (AUS, architect, senior lecturer at Curtin University, Perth): ​Spolia as luxury. Stephanie van de Voorde (VUB; engineer-architect and architecture historian): ​The specificity of post-war building materials)</p>
@@ -71,7 +79,11 @@
         <p>- Dirk Hebel (CH, Assistant professor of architecture and construction, ETH, Zurich): ​Building for disassembly: the case of the GBMZ housing project in Zurich.</p>
         <p>- Izaskun Chinchilla (SP, Architect, Principal Izaskun Chinchilla Architects): [selection of own work - design for change]</p>
     </div>
-    <div class="text" id="location">
+    <div class="text draggable no-screen">
+        <h2>EVENTUAL ADDITIONAL SECTION</h2>
+        <p>Invisible on screen and only visible in the print version.</p>
+    </div>
+    <div class="text draggable" id="location">
         <h2>LOCATION</h2>
         <p>Delft University of Technology</p>
         <p>Faculty of Architecture and the Build Environment</p>
@@ -80,7 +92,7 @@
         <p>The Netherlands</p>
         <p>View on map</p>
     </div>
-    <div class="text" id="register">
+    <div class="text draggable" id="register">
         <h2>REGISTER</h2>
         <p>Registration details coming soon.</p>
         <h3>Payment instructions</h3>
@@ -95,7 +107,7 @@
         <p>The TU Delft Faculty of Architecture and the Built Environment must be notified in writing of any cancellations by no later than COB Friday 19 February 2016. Refunds will be issued after the event and are not available for cancellation after this date.
         </p>
     </div>
-    <div class="text" id="contact" style="padding-bottom: 30px;">
+    <div class="text draggable" id="contact" style="padding-bottom: 30px;">
         <h2>CONTACT</h2>
         <p>For questions regarding the content and organisation of this conference, and the larger project ‘Constructing the Commons’, please contact: info@tudelft.nl</p>
     </div>
