--- a/beta/index.html
+++ b/beta/index.html
@@ -9,8 +9,8 @@
     <meta http-equiv="Cache-Control" content="no-cache">
     <link rel="icon" type="image/png" href="cursor-32.png">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="print.css" media="print">
-    <!--<link rel="stylesheet" href="print-poster.css" media="print">-->
+    <!--<link rel="stylesheet" href="print.css" media="print">-->
+    <link rel="stylesheet" href="print-poster.css" media="print">
     <script src="scripts/jquery-1.9.1.js"></script>
     <script src="scripts/jquery-ui-1.9.2.custom.js"></script>
 </head>
@@ -35,18 +35,24 @@
         <div class="cover-info draggable">
             <p><b>An International Symposium on the Practices of Off-site Reuse in Architecture</b><br/>
             Faculty of Architecture and the Built Environment, TU Delft</p>
-            <p><b>Visiting Professors<span class="no-screen">:</span> ROTOR</b><br/>Chair of Architecture Dwelling</p>
+            <p><b>Visiting Professors<span class="no-screen">:</span> ROTOR</b><br/>Chair of Architecture and Dwelling / <br />Jaap Bakema Study Centre</p>
             <p><b>April 24-25, 2017</b></p>
         </div>
         <div class="text draggable" id="theme">
             <h2>THEME</h2>
-            <p>Off-site reuse in architecture is the topic of this conference. Off-site reuse aims at the salvaging of building components and materials from buildings that have reached the end of their life cycle, in order to reuse them elsewhere. Off-site reuse has been a common practice for centuries. However, during the twentieth century it became a forgotten art and most buildings were built with no idea about reuse and its concomitant question of sustainability. Today, the idea of off-site reuse is once again gaining momentum as the linear modes of materials consumption proper to the age of industrialization are being questioned.</p>
-            <p>Yet, in a highly streamlined building industry, many obstacles and tenacious routines need to be overcome to make these practices more than marginal again. Legislations need to be rewritten, certification protocols to be reinvented; designers need to change habits, engineers to rethink component assembly technologies, et cetera. In the past decade, many experts and practitioners, designers and deconstruction professionals have pushed this agenda and made some valuable progress. This symposium will bring several of these actors together in order to gauge where we stand now, and what lays ahead, what progress is within reach, in terms of engineering, design and overall policy.</p>
+            <p class="no-screen poster-only" style="margin-bottom: 4.5cm;"><b><span style="font-family: League Gothic; font-size: 32pt; letter-spacing: 1pt; margin-bottom: -5mm; vertical-align: -2pt">DECONSTRUCTION</span></p>
+            <div class="no-screen" style="position: absolute; left: 7cm; top: 0cm; font-size: 21pt; line-height: 24pt;">
+                <p>An International Symposium on the Practices of Off-site Reuse in Architecture</b><br/>
+                Faculty of Architecture and the Built Environment, TU Delft</p>
+                <p><b>Visiting Professors: ROTOR</b><br/>Chair of Architecture and Dwelling / Jaap Bakema Study Centre</p>
+                <p><b>April 24-25, 2017</b></p>
+            </div>
+            <p>The topic of this conference is off-site reuse in architecture, a practice that involves salvaging components and materials from buildings that have reached the end of their life cycle, in order to reuse them elsewhere. Off-site reuse has been a common practice for centuries; however, during the twentieth century it became a forgotten art as most buildings were built with no idea about reuse and the concomitant question of sustainability. Today, the idea of off-site reuse is once again gaining momentum as the linear modes of materials consumption proper to the age of industrialization are being questioned.</p>
+            <p>Yet, in a highly streamlined building industry, many obstacles and tenacious routines need to be overcome to make these practices more than marginal again. Legislations need to be rewritten, certification protocols to be reinvented; designers need to change habits, engineers to rethink component assembly technologies, etc. In the past decades, deconstruction professionals, designers and other experts have pushed this agenda and made some valuable progress. This symposium will bring several of these actors together in order to gauge where we stand now, what lies ahead and what progress is within reach, in terms of engineering, design and overall policy.</p>
             <p>The breached topics will fall under the following headings: <br />
-            How to deconstruct existing buildings slated for demolition practically? What are the technological, logistical and administrative implications? <br />
-            What design challenges, but also opportunities lie in the integration of existing components in new structures?<br />
-            How to design buildings in such a way that you maximize its potential for later reuse, on site, but also off-site? Is the “legolization” of the building industry within reach? And is it desirable? <br />
-            What might off-site reuse mean in terms of building culture, heritage and social value?</p>
+            - What might off-site reuse mean in terms of building culture, heritage and social value?<br />
+            - How to deconstruct existing buildings slated for demolition practically? What are the technological, logistical and administrative implications?<br />
+            - What design challenges, but also opportunities lie in the integration of existing components in new structures?<br />- How to design buildings in such a way that you maximize its potential for later reuse, on site, but also off-site? Is the “legolization” of the building industry within reach? And is it desirable?</p>
         </div>
         <div class="text draggable no-print" id="context">
             <h2>CONTEXT</h2>
@@ -59,7 +65,7 @@
             <h3>Monday, April 24th</h3>
             <table>
                 <tr>
-                    <td><b>14:30</b></td><td>Welcome by <b>Dean Peter Russell</b></td>
+                    <td><b>14:30</b></td><td>Welcome by hosting chair <b>JBSC</b></td>
                 </tr>
                 <tr>
                     <td><b>14:40</b></td><td>Welcome by Chair of Dwelling, hosting chair<br /><b>Dick van Gameren</b> / <b>Dirk van den Heuvel</b></td>
@@ -74,8 +80,8 @@
                         <p><i>How to understand the practices of off-site reuse against the history of modern architecture and industrialized building? Why did off-site reuse became marginalized after WWII? And how to approach the topic from a heritage point of view? This session takes a historical look on urgent contemporary issues.</i></p>
                         <p><a href="#LionelDevlieger">Lionel Devlieger</a> (Engineer-architect and architectural historian, principal of Rotor, Brussels) — <i>Demolition and reuse in history. Examples from 18th, 19th and 20th century Brussels.</i></p>
                         <p><a href="#AnnetteCondello">Annette Condello</a> (Architectural historian, senior lecturer at Curtin University, Perth) — <i>Spolia as luxury.</i></p>
-                        <p><a href="#StephanievandeVoorde">Stephanie van de Voorde</a> (VUB; engineer-architect and architecture historian) — <i>The specificity of post-war building materials.</i></p>
-                        <p><a href="#WesseldeJonge">Wessel de Jonge</a> (TU Delft, practicing architect and architectural heritage expert) — <i>Components removal and re-installation in heritage projects. Assets and challenges of modern materials.</i></p>
+                        <p><a href="#StephanievandeVoorde">Stephanie van de Voorde</a> (VUB; engineer-architect and architectural historian) — <i>The specificity of post-war building materials.</i></p>
+                        <p><a href="#WesseldeJonge">Wessel de Jonge</a> (TU Delft, practicing architect and architectural heritage expert) — <i>Components removal and re-installation in modern heritage projects</i></p>
                     </td>
                 </tr>
             </table>
@@ -86,11 +92,11 @@
                     <td id="25-9-30"><b>9:30–<br/>12:00</b></td>
                     <td>
                         <h4>Conditions for Productive Reuse</h4>
-                        <p><i>What logistic, legal &amp; economic challenges lie ahead? How can we make deconstruction and building component salvage work? What might be viable business models? Who are our allies, who the enemy?  This session discusses the often paradoxical practicalities of deconstruction as opposed to demolition.</i></p>
+                        <p><i>What logistic, legal and economic challenges lie ahead? How can we make deconstruction and building component salvage work? What might be viable business models? Who are the allies, who the enemy?  This session discusses the practicalities of deconstruction as opposed to demolition.</i></p>
                         <p><a href="#AnneNicklin">Anne Nicklin</a> (Architect, Director of the Building Materials Reuse Association) — <i>The professional building materials reuse sector in the US. Recent achievements and challenges ahead.</i></p>
-                        <p><a href="#JanJongert">Jan Jongert</a> (Architect, founder of Superuse Architecten, Rotterdam) — <i>SuperUse. Pioneering urban mining in the Netherlands for two decades.</i></p>
                         <p><a href="#TedReiff">Ted Reiff</a> (Founder and president of The ReUse People of America, Inc) — <i>The Reuse People of America. Current business model and perspectives for development.</i></p>
-                        <p><a href="#ArievanLiempd">Arie van Liempd</a> (NL, owner of A. van Liempd Sloopbedrijven B.V.)</p>
+                        <p><a href="#ArievanLiempd">Arie van Liempd</a> (NL, owner of A. van Liempd Sloopbedrijven B.V.) — <i>About Demolition</i></p>
+                        <p><a href="#JanJongert">Jan Jongert</a> (Architect, founder of Superuse Architecten, Rotterdam) — <i>SuperUse. Pioneering urban mining in the Netherlands for two decades.</i></p>
                     </td>
                 </tr>
                 <tr>
@@ -98,11 +104,11 @@
                     <td>
                         <h4>Future Reuse</h4>
                         <p><i>What qualities are (re)introduced by designing with reused components? How to design for future reuse? How to anticipate future disassembly and productive deconstruction practices? This third session presents challenging and advanced examples in reuse design of today</i></p>
-                        <p><a href="#IzaskunChinchilla">Izaskun Chinchilla</a> (Architect, Principal Izaskun Chinchilla Architects; Senior Teaching Fellow and Senior Research Associate, Barlett School of Architecture)</p>
-                        <p><a href="#EvaPrats">Eva Prats</a> (Architect, Principal of Flores Prats, Barcelona)</p>
-                        <p><a href="#ReinierdeGraaf">Reinier de Graaf</a> (Architect, Partner of OMA, Rotterdam)</p>
+                        <p><a href="#IzaskunChinchilla">Izaskun Chinchilla</a> (Architect, Principal Izaskun Chinchilla Architects; Senior Teaching Fellow and Senior Research Associate, Barlett School of Architecture) — <i>Casa Solariega and other projects</i></p>
+                        <p><a href="#EvaPrats">Eva Prats</a> (Architect, Principal of Flores Prats, Barcelona) — <i>The discipline of the existing: Sala Beckett Theatre and Drama Centre in Barcelona</i></p>
                         <p><a href="#MarkGorgolewski">Mark Gorgolewski</a> (Architect, Professor at Ryerson University, Toronto) — <i>Resource Salvation - The Architecture of Reuse.</i></p>
                         <p><a href="#FelixHeisel">Felix Heisel</a> (Architect, head of research Professorship of Sustainable Construction Karlsruhe Institute of Technology (KIT), and ETH Zurich’s Future Cities Laboratory (FCL), Singapore) — <i>Building an Urban Mine. The example of UMAR in Switzerland.</i></p>
+                        <p><a href="#ReinierdeGraaf">Reinier de Graaf</a> (Architect, Partner of OMA, Rotterdam) — <i>The case of Timmerhuis, Rotterdam</i></p>
                     </td>
                 </tr>
             </table>
@@ -202,6 +208,7 @@
         <div class="no-screen print-footer">
             <div class="location-print">
                 <p>LOCATION<br />
+                <p>Oost Serre<p>
                 <p>Julianalaan 134</p>
                 <p>2628 BL Delft</p>
                 <p>The Netherlands</p>
@@ -217,6 +224,7 @@
         <div class="no-screen print-footer-2">
             <div class="location-print">
                 <p>LOCATION<br />
+                <p>Oost Serre<p>
                 <p>Julianalaan 134</p>
                 <p>2628 BL Delft</p>
                 <p>The Netherlands</p>
