--- a/beta/index.html
+++ b/beta/index.html
@@ -9,8 +9,8 @@
     <meta http-equiv="Cache-Control" content="no-cache">
     <link rel="icon" type="image/png" href="cursor-32.png">
     <link rel="stylesheet" href="style.css">
-    <!--<link rel="stylesheet" href="print.css" media="print">-->
-    <link rel="stylesheet" href="print-poster.css" media="print">
+    <link rel="stylesheet" href="print.css" media="print">
+    <!--<link rel="stylesheet" href="print-poster.css" media="print">-->
     <script src="scripts/jquery-1.9.1.js"></script>
     <script src="scripts/jquery-ui-1.9.2.custom.js"></script>
 </head>
